--- a/VW_CarStock_WebApp/Pages/Index.cshtml
+++ b/VW_CarStock_WebApp/Pages/Index.cshtml
@@ -4,7 +4,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-             <h3 class="font-weight-bold">Welcome to the VolksWagen Stock taking system. Please choose your branch below to continue.</h3>
+             <h3 class="font-weight-bold">Welcome to the VolksWagen Stock taking system. </h3>
+             <p>&nbsp;</p>
+             <h5>Please choose your branch below to continue.</h5>
         </div>
     </div>
      <div class="row">
@@ -20,4 +22,6 @@
         </div>
     </div>
   </div>
+
+
 
