--- a/VW_CarStock_WebApp/Pages/ViewCarStock.cshtml
+++ b/VW_CarStock_WebApp/Pages/ViewCarStock.cshtml
@@ -5,39 +5,37 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<div class="row">
-    <div class="col" >
-        @if (Model.Cars.Count()>0)
-        {
-            @foreach (var car in Model.Cars)
+<div class="container">
+    <div class="row">
+        <div class="col" >
+            @if (Model.Cars.Count()>0)
             {
-                <button class="accordion">@Html.DisplayFor(m => car.CarMake) </button>
-                <div class="panel">
-                    <p></p>
-                    <p></p>
-                </div>
+                @foreach (var car in Model.Cars)
+                {
+                    <button class="accordion">@Html.DisplayFor(m => car.CarMake) </button>
+                    <div class="panel">
+                        <p></p>
+                        <p></p>
+                    </div>
+                }
             }
-        }
-        else
-        {
-            <p>No cars found</p>
-        }
+            else
+            {
+                <p>No cars found.</p>
+            }
+        </div>
     </div>
 </div>
 
-
-    
-    
-    @*<<button class="accordion">Section 2</button>
-    <div class="panel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<div class="row">
+    <div class="col" >
+        <button type="button" class="btn btn-labeled btn-success" >
+            <span class="btn-label"><i class="glyphicon glyphicon-floppy-disk"></i></span>
+            <a class="" style="text-decoration: none; color:white;" asp-area="" asp-page="/ModifyCarStock">Add New Car</a>
+        </button>
+        
     </div>
-    
-    <button class="accordion">Section 3</button>
-    <div class="panel">
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    *@
+</div>
 
 <script>
   var acc = document.getElementsByClassName("accordion");
