--- a/VW_CarStock_WebApp/Pages/ModifyCarStock.cshtml
+++ b/VW_CarStock_WebApp/Pages/ModifyCarStock.cshtml
@@ -102,7 +102,7 @@
        
         <button type="button" class="btn btn-labeled btn-warning" >
             <span class="btn-label"><i class="glyphicon glyphicon-remove"></i></span>
-            <a class="" style="text-decoration: none; color:black;" asp-area="" asp-page="/ModifyCarStock">Cancel</a>
+            <a class="" style="text-decoration: none; color:black;" asp-area="" asp-page="/ViewCarStock">Cancel</a>
         </button>
     </div>
 </div>
