--- a/VW_CarStock_WebApp/Pages/ModifyCarStock.cshtml
+++ b/VW_CarStock_WebApp/Pages/ModifyCarStock.cshtml
@@ -18,92 +18,88 @@
     </div>
 
 </div>
-<div class="row">
-    <div class="col-4" >
-        <label for="carMake" class="form-label">Make: </label>
-        <input class="form-control" list="carMakeOptions" id="carMake" placeholder="Type to search...">
-        <datalist id="carMakeOptions">
-            @foreach(var make in Model.CarMakeList)
-            {
-                <option value="@make.Value.ToString()"> </option>
-            }
-        </datalist>
+<form class="form-horizontal" action="">
+     <div class="row form-group">
+         <label for="carMakeId" class="control-label col-sm-2">Make</label>
+         <div class="col-sm-4">
+             <select id="carMakeId" class="form-control"  >
+             @foreach(var make in Model.CarMakeList)
+             {
+                <option value="@make.Key.ToString()"> @make.Value.ToString()</option>
+             }
+             </select>
+        </div>
     </div>
-</div>
- <div class="row">
-
-    <div class="col-4" >
-        <label for="carModel" class="form-label">Model: </label>
-        <input class="form-control" list="carModelOptions" id="carModel" placeholder="Type to search...">
-        <datalist id="carModelOptions">
-            @foreach(var carmodel in Model.CarModelList)
-            {
-                <option value="@carmodel.Value.ToString()"> </option>
-            }
-        </datalist>
+    <div class="row form-group">
+         <label for="carModelId" class="control-label col-sm-2">Model</label>
+         <div class="col-sm-4">
+             <select id="carModelId" class="form-control"  >
+             @foreach(var carmodel in Model.CarModelList)
+             {
+                <option value="@carmodel.Key.ToString()"> @carmodel.Value.ToString()</option>
+             }
+             </select>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-4" >
-        <label for="carTrim" class="form-label">Trim: </label>
-        <input class="form-control" list="CarTrimOptions" id="carTrim" placeholder="Type to search...">
-        <datalist id="CarTrimOptions">
-            @foreach(var trim in Model.CarTrimLeveList)
-            {
-                <option value="@trim.Value.ToString()"> </option>
-            }
-        </datalist>
+    <div class="row form-group">
+         <label for="carTrimId" class="control-label col-sm-2">Trim Level</label>
+         <div class="col-sm-4">
+             <select id="carTrimId" class="form-control"  >
+             @foreach(var trim in Model.CarTrimLeveList)
+             {
+                <option value="@trim.Key.ToString()"> @trim.Value.ToString()</option>
+             }
+             </select>
+        </div>
     </div>
-</div>
- <div class="row">
-    <div class="col-4" >
-        <label for="engineType" class="form-label">Engine: </label>
-        <input class="form-control" list="engineTypeOptions" id="engineType" placeholder="Type to search...">
-        <datalist id="engineTypeOptions">
-            @foreach(var engine in Model.CarEngineList)
-            {
-                <option value="@engine.Value.ToString()"> </option>
-            }
-        </datalist>
+    <div class="row form-group">
+        <label for="engineTypeId" class="control-label col-sm-2">Engine</label>
+        <div class="col-sm-4">
+            <select id="engineTypeId" class="form-control"  >
+                @foreach(var engine in Model.CarEngineList)
+                 {
+                     <option value="@engine.Key.ToString()">@engine.Value.ToString()</option>
+                 }
+            </select>
+        </div>
     </div>
-</div>
-
-<div class="row">
-    <div class="col-4" >
-        <label for="featurelist" class="form-label">Features: </label>
-        <select id="featurelist" class="form-select" size="3" multiple>
-            @foreach(var feature in Model.FeatureList)
-            {
-                <option value="@feature.Key.ToString()">@feature.Value.ToString()</option>
-
-            }
-         </select>
+    <div class="row form-group">
+        <label for="price" class="control-label col-sm-2">Price</label>
+        <div class="col-sm-4" >
+            <input id="price" type="number" step="0.01" class="form-control"  />
+        </div>
     </div>
-</div>
-
-<div class="row">
-    <div class="col-4" >
-        <label for="price" class="form-label">Price: </label>
-        <input id="price" type="number" step="0.01" class="form-control"  />
+    <div class="row form-group">
+        <label for="featurelist" class="control-label col-sm-2">Features</label>
+        <div class="col-sm-4" >
+            <select id="featurelist" class="form-control" size="3" multiple>
+                @foreach(var feature in Model.FeatureList)
+                {
+                    <option value="@feature.Key.ToString()">@feature.Value.ToString()</option>
+                }
+             </select>
+        </div>
     </div>
-</div>
+</form>
 
 <div class="row">
-    <div class="col-4" >
+    <div class="col-sm-1" >
         <button type="button" class="btn btn-labeled btn-success" onclick="saveCar()">
             <span class="btn-label"><i class="glyphicon glyphicon-floppy-disk"></i></span>Save
         </button>
-        @if (Model.car.CarId != 0 )
-        {
+    </div>
+    @if (Model.car.CarId != 0 )
+    {
+        <div class="col-sm-2" >
             <button type="button" class="btn btn-labeled btn-error"  onclick="deleteCar()">
                 <span class="btn-label"><i class="glyphicon glyphicon-trashcan"></i></span>Delete
             </button>
-        }
-       
+        </div>
+    }
+    <div class="col-sm-1" >
         <button type="button" class="btn btn-labeled btn-warning" >
             <span class="btn-label"><i class="glyphicon glyphicon-remove"></i></span>
             <a class="" style="text-decoration: none; color:black;" asp-area="" asp-page="/ViewCarStock">Cancel</a>
         </button>
     </div>
 </div>
-
